<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>pl.edu.agh</groupId>
  <artifactId>muvto</artifactId>
  <packaging>jar</packaging>
  <version>0.1.0-SNAPSHOT</version>
  <name>muvto</name>
  <url>http://maven.apache.org</url>

  <properties>

    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>

    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
    <project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>

    <spring.version>4.2.3.RELEASE</spring.version>
    <junit.version>4.12</junit.version>
    <slf4j.version>1.7.13</slf4j.version>
    <logback.version>1.1.3</logback.version>
    <jgrapht.version>0.9.1</jgrapht.version>
    <jmetal.version>5.0</jmetal.version>
    <neuroph.version>2.9</neuroph.version>
    <fj.version>4.4</fj.version>

  </properties>

  <repositories>
      <repository>
          <id>neuroph-repository</id>
          <name>Neuroph Repository</name>
          <url>http://neuroph.sourceforge.net/maven2/</url>
      </repository>
  </repositories>

  <dependencies>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
      <version>${jgrapht.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-ext</artifactId>
      <version>${jgrapht.version}</version>
    </dependency>

    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-core</artifactId>
      <version>${jmetal.version}</version>
    </dependency>

    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-algorithm</artifactId>
      <version>${jmetal.version}</version>
    </dependency>

    <!-- <dependency>
      <groupId>org.neuroph</groupId>
      <artifactId>neuroph-core</artifactId>
      <version>${neuroph.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-nop</artifactId>
        </exclusion>
      </exclusions>
    </dependency> -->

    <dependency>
      <groupId>org.functionaljava</groupId>
      <artifactId>functionaljava</artifactId>
      <version>${fj.version}</version>
    </dependency>

    <dependency>
      <groupId>org.functionaljava</groupId>
      <artifactId>functionaljava-java8</artifactId>
      <version>${fj.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <mainClass>pl.edu.agh.muvto.Main</mainClass>
          <arguments>
          </arguments>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.3</version>
      </plugin>

    </plugins>
  </reporting>

</project>
